# bf_compiler

./: .gitignore  CMakeLists.txt  README.md
src/asm/: CMakeLists.txt  build.sh  constants.asm  data.asm  decreaseIndex.asm  increaseIndex.asm  macros.asm  print.asm  printData.asm  readData.asm  start.asm
src/asm_cpp_embedder/: CMakeLists.txt  generate_hpp.sh
src/bf_compiler/: CMakeLists.txt  filegen.cpp  filegen.hpp  main.cpp  token.cpp  token.hpp  tokenize.cpp  tokenize.hpp
src/cpp/bf_compiler/: CMakeLists.txt  token.hpp  tokenize.hpp
src/cpp/pre_processing/: CMakeLists.txt  generate_hpp.sh  main.cpp
src/pre_processing/: CMakeLists.txt  generate_hpp.sh  generate_macro_files.sh
test/: errorDataPointerOutOfBound.sh  errorNoMatchingEndBracket.sh  errorNoMatchingStartBracket.sh  helloWorldTest.sh  memoryLeakTest.sh  userInputTest.sh
